--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1377,5 +1377,15 @@ section {
 }
 
 .topMargin{
-  margin-top: 20px;
+  margin-top: 10px;
+}
+
+.vl {
+  border-left: 1px solid lightgrey;
+  height: 50px;
+}
+
+.lightgrey{
+  border-top: 1px solid lightgrey;
+  margin-top: 10px;
 }
