--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1381,11 +1381,11 @@ section {
 }
 
 .vl {
-  border-left: 1px solid lightgrey;
+  border-left: 1px solid #d4e9e6;
   height: 50px;
 }
 
 .lightgrey{
-  border-top: 1px solid lightgrey;
+  border-top: 1px solid #d4e9e6;
   margin-top: 10px;
 }
